--- a/IMG/index.html
+++ b/IMG/index.html
@@ -16,51 +16,52 @@
 <body>
     <header>
         <h1 class="titulo">Por pouco não é uma enciclopédia!!!</h1>
+        <input type="text" id="txtBusca" placeholder="Buscar..."/>
         <nav>
             <ul>
                 <li>
-                    <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                    <button type="button" class="btn btn-outline-success" data-toggle="tooltip" data-placement="top" title="HOME">
                   HOME
                   </button>
                 </li>
                 <li>
                     <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Disabled tooltip">
-                    <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                    <button type="button" class="btn btn-outline-success" data-toggle="tooltip" data-placement="top" title="SOBRE">
                         SOBRE
                       </button>
                     </span>
                 </li>
                 <li>
                     <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Disabled tooltip"></span>
-                    <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                    <button type="button" class="btn btn-outline-success" data-toggle="tooltip" data-placement="top" title="NATIVOS">
                        NATIVOS
                       </button>
                     </span>
                 </li>
                 <li>
                     <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Disabled tooltip">
-                    <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                    <button type="button" class="btn btn-outline-success"data-toggle="tooltip" data-placement="top" title="TERRESTRES">
                      TERRESTRES
                       </button>
                     </span>
                 </li>
                 <li>
                     <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Disabled tooltip"></span>
-                    <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                    <button type="button" class="btn btn-outline-success"data-toggle="tooltip" data-placement="top" title="MARINHOS">
                  MARINHOS
                       </button>
                     </span>
                 </li>
                 <li>
                     <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Disabled tooltip"></span>
-                    <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                    <button type="button" class="btn btn-outline-success"data-toggle="tooltip" data-placement="top" title="OBJETIVO">
                       OBJETIVO
                       </button>
                     </span>
                 </li>
                 <li>
                     <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Disabled tooltip"></span>
-                    <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                    <button type="button" class="btn btn-outline-success"data-toggle="tooltip" data-placement="top" title="CONTATOS">
                       CONTATOS
                       </button>
                     </span>
@@ -68,3 +69,15 @@
             </ul>
         </nav>
     </header>
+
+    <div class="quadrado1">
+       
+        
+    </div>
+
+    <div class="quadrado2">
+
+    </div>
+    <footer>
+        pei
+    </footer>
