--- a/IMG/index.html
+++ b/IMG/index.html
@@ -79,5 +79,6 @@
 
     </div>
     <footer>
-        pei
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-github"></i>
     </footer>
