--- a/IMG/index.html
+++ b/IMG/index.html
@@ -79,7 +79,7 @@
 
     </div>
     <footer>
-        <h5></h5>
+        <h5>NOS SIGA NAS REDES SOCIAIS</h5>
         <i class="fa-brands fa-instagram"></i>
         <i class="fa-brands fa-github"></i>
     </footer>
