--- a/IMG/index.html
+++ b/IMG/index.html
@@ -118,7 +118,7 @@
             <i class="fa-solid fa-envelope"></i>
         <i class="fa-brands fa-github"></i>
     </div>
-    <h5 class="rodape">NOS SIGA NAS REDES SOCIAIS</h5>
+    <h5 class="rodape">SIGA NOSSAS REDES SOCIAIS</h5>
         </footer>
     
         <script src="script.js"></script>
