--- a/IMG/index.html
+++ b/IMG/index.html
@@ -18,7 +18,7 @@
             <div class="bar2"></div>
             <div class="bar3"></div>
           </div>
-        <h1 class="titulo">Por pouco não é uma enciclopédia!!!</h1>
+        <h1 class="titulo">Animalium</h1>
         <input type="text" id="txtBusca" placeholder="Buscar..."/>
         <nav>
             <ul>
