--- a/IMG/index.html
+++ b/IMG/index.html
@@ -36,7 +36,7 @@
                 </li>
                 <li>
                     <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Disabled tooltip"></span>
-                    <button type="button" class="btn btn-outline-success" data-toggle="tooltip" data-placement="top" title="NATIVOS">
+                    <button type="button" class="btn btn-outline-success" data-toggle="tooltip" data-placement="top" title="NATIVOS" a href="file:///C:/Users/natha/Documents/GitHub/meudeus/NOVEMBRO2022/IMG/index.html"></a>>
                        NATIVOS
                       </button>
                     </span>
