--- a/IMG/index.html
+++ b/IMG/index.html
@@ -36,8 +36,7 @@
                 </li>
                 <li>
                     <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Disabled tooltip"></span>
-                    <button type="button" class="btn btn-outline-success" data-toggle="tooltip" data-placement="top" title="NATIVOS" >
-                      <button onclick="window.location.href = 'https://reallylearnportuguese.com/2022/04/03/10-animais-nativos-do-brasil/">link</button>
+                    <button type="button" class="btn btn-outline-success" data-toggle="tooltip" data-placement="top" title="NATIVOS" 
                        NATIVOS
                       </button>
                     </span>
